[package]
name = "zk-img-methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.2.5" }

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std'] }
image = "0.24"
sha2 = "0.10"
hex = "0.4"